--- a/cfg/baseline.yaml
+++ b/cfg/baseline.yaml
@@ -1,15 +1,15 @@
 env:
   size: [6, 6]
-  obstacles: 3
-  max_steps: 100
+  max_steps: 200
   seed: 0
+  layout: "default"
 
 agent:
-  algo: q_learning       # matches apr/agents/q_learning.py
+  algo: q_learning
   alpha: 0.1
   gamma: 0.95
   epsilon: 0.3
 
 train:
-  episodes: 3000
-  log_every: 500
+  episodes: 1000
+  log_every: 200
